--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.13.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "luxon": "^3.5.0",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.5"
   }
